<resources>
    <string name="app_name">Organization App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Logged In!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Optimal Org</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register Now!</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_conditions">I agree to the Terms and Conditions</string>
</resources>