<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_app_login_background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/signUp_info_background"
        android:layout_width="302dp"
        android:layout_height="263dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/signup_curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registration" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_info_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="255dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/signUp_info_background"
        app:layout_constraintEnd_toEndOf="@+id/signUp_info_background"
        app:layout_constraintStart_toStartOf="@+id/signUp_info_background"
        app:layout_constraintTop_toTopOf="@+id/signUp_info_background">

        <EditText
            android:id="@+id/pt_signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/pv_border"
            android:drawableStart="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingVertical="15dp" />

        <EditText
            android:id="@+id/pt_signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/pv_border"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp" />

        <EditText
            android:id="@+id/pt_signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/pv_border"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingVertical="15dp" />

        <EditText
            android:id="@+id/pt_signUp_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/pv_border"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingVertical="15dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FFFFFF"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintEnd_toEndOf="@+id/signUp_info_background"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/signUp_info_background"
        app:layout_constraintTop_toBottomOf="@+id/signUp_info_background" />

</androidx.constraintlayout.widget.ConstraintLayout>